--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,32 @@
-
+body {
+  font-family: arial, sans-serif;
+}
+.weather-app {
+  max-width: 652px;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #000000;
+  border-radius: 25px;
+}
+h1 {
+  color: #878787;
+  font-size: 22px;
+  font-weight: 100;
+  height: 50px;
+  margin-bottom: 0px;
+  width: 652px;
+  margin-bottom: 0;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  color: rgb(135, 135, 135);
+  font-size: 15px;
+  font-weight: 100;
+  line-height: 19px;
+}
