--- a/src/style.css
+++ b/src/style.css
@@ -1,23 +1,17 @@
 body {
   font-family: arial, sans-serif;
 }
-.weather-app {
-  max-width: 652px;
-  margin: 20px auto;
-  padding: 20px;
-  border: 1px solid #000000;
-  border-radius: 25px;
-}
 h1 {
   color: #878787;
   font-size: 22px;
   font-weight: 100;
   height: 50px;
   margin-bottom: 0px;
-  width: 652px;
+  width: 600px;
   margin-bottom: 0;
 }
 ul {
+  text-align: justify;
   margin: 0;
   padding: 0;
 }
@@ -29,4 +23,34 @@ li {
   font-size: 15px;
   font-weight: 100;
   line-height: 19px;
+}
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
+.weather-app {
+  max-width: 652px;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #000000;
+  border-radius: 25px;
+}
+.overview {
+  margin-bottom: 20px;
+}
+.weather-temperature img {
+  margin-right: 5px;
+  height: 64px;
+  width: 64px;
+}
+.weather-temperature strong {
+  color: rgb(33, 33, 33);
+  font-size: 64px;
+  line-height: 1;
+  font-weight: 400;
+}
+.weather-temperature units {
+  position: relative;
+  font-size: 16px;
+  top: -34px;
 }
