--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,9 @@
 body {
   font-family: arial, sans-serif;
+  background-image: linear-gradient(to top, #b224ef 0%, #7579ff 100%);
 }
 h1 {
-  color: #878787;
+  color: rgb(104, 50, 139);
   font-size: 22px;
   font-weight: 100;
   height: 50px;
@@ -11,16 +12,18 @@ h1 {
   margin-bottom: 0;
 }
 ul {
+  color: rgb(134, 24, 207);
   margin: 0;
   padding: 0;
+  font-weight: bolder;
 }
 li {
   margin: 0;
   padding: 0;
   list-style: none;
-  color: rgb(135, 135, 135);
+  color: rgb(134, 24, 207);
   font-size: 15px;
-  font-weight: 100;
+  font-weight: bolder;
   line-height: 19px;
 }
 li::first-letter {
@@ -34,7 +37,7 @@ li::first-letter {
   max-width: 652px;
   margin: 20px auto;
   padding: 20px;
-  border: 1px solid #000000;
+  border: 1px solid #6b2165;
   border-radius: 5px;
 }
 .overview {
@@ -58,11 +61,12 @@ li::first-letter {
 }
 
 .weather-temperature .active {
-  color: rgb(33, 33, 33);
+  color: rgb(134, 24, 207);
   cursor: default;
   text-decoration: none;
 }
 
 .weather-temperature .active:hover {
   text-decoration: none;
+  color: rgb(134, 24, 207);
 }
